--- a/ticketing-system/.gitignore
+++ b/ticketing-system/.gitignore
@@ -1,4 +1,38 @@
+# Dependencies
 node_modules/
+server/node_modules/
+client/node_modules/
+
+
 .env
 server/.env
 client/.env
+
+# Build output
+client/dist/
+server/dist/
+dist-ssr/
+
+# Logs
+logs/
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
+
+# Local config
+*.local
+
+# Editor / OS files
+.vscode/*
+!.vscode/extensions.json
+.idea
+.DS_Store
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
+
