--- a/ticketing-system/client/package.json
+++ b/ticketing-system/client/package.json
@@ -16,6 +16,7 @@
     "@mui/material": "^7.3.6",
     "@tailwindcss/vite": "^4.1.18",
     "axios": "^1.13.2",
+    "lucide-react": "^0.562.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.15.0",
